Fix z-index

--- a/src/css/code/workspace.css
+++ b/src/css/code/workspace.css
@@ -62,7 +62,7 @@
 
 #workspace #workspace-minimap {
   position: absolute;
-  z-index: 25;
+  z-index: var(--layer-popover);
   margin: 0.5rem;
   right: 0.5rem;
 }
